--- a/parallax.css
+++ b/parallax.css
@@ -75,9 +75,10 @@ body, html{
     color:aliceblue;
     
 }
-
+/*
 @media(max-width: 568px){
     .pimg1, .pimg2, .pimg3{
     background-attachment: scroll;
     }
+*/
 }
